--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,3 @@
-
 # Environment variables declared in this file are automatically made available to Prisma.
 # See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
@@ -6,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgresql://jos3lo:3322@localhost:8000/huasco?schema=public"
+CLIENT_URL="http://localhost:5173"
